added a version of nutch on branch 1.15 with added support for 3.141.59